--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
     <div class="container">
       <div class="step step--smile">
-        <img src="./img/step-1.svg"> 
+        <img class="step__img" src="./img/step-1.svg"> 
         <p class="step__topic">Выбери заявку</p>
         <p class="step__desc">
           Выбери заявку из списка ниже. Обрати внимание, что если клиент
           жалуется на проблемы, предположительно вызванные ХХХ, заявку
           необходимо перевести на горячую линию, не оставляя никаких
           комментариев.
-        </p>
+        </p> 
       </div>
       <div class="step step--phone">
-        <img src="./img/step-2.svg">
+        <img class="step__img" src="./img/step-2.svg">
         <p class="step__topic">Позвони клиенту</p>
         <p class="step__desc">
           У всех сотрудников есть аккаунт в ХХХХ. Для этого не нужны дополнительные
@@ -32,7 +32,7 @@
         </p>
       </div>
       <div class="step step--phone">
-        <img src="./img/step-3.svg">
+        <img class="step__img" src="./img/step-3.svg">
         <p class="step__topic">Проведи звонок</p>
         <p class="step__desc">
           Будь приветлив и вежлив, постарайся узнать и решить проблему клиента. О том,
@@ -41,13 +41,14 @@
         <a href="#" class="step__link">Частые вопросы</a>
       </div>
       <div class="step step--list">
-        <img src="./img/step-4.svg">
+        <img class="step__img" src="./img/step-4.svg">
         <p class="step__topic">Запиши результаты</p>
         <p class="step__desc">
           Комментарий по звонку и все необходимые данные записывай сразу после звонка.
           Старайся избегать общих фраз и отвечать на вопросы максимально развернуто.
         </p>
       </div>
+      <div class="separator"></div>
     </div>
   </body>
 </html>
