--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
   <head>
     <meta charset="utf-8" />
     <title>Тестовое задание</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic"
-      rel="stylesheet"
-    />
     <link href="css/style.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <div class="container">
-      <div class="step step--smile">
-        <img class="step__img" src="./img/step-1.svg"> 
-        <p class="step__topic">Выбери заявку</p>
-        <p class="step__desc">
-          Выбери заявку из списка ниже. Обрати внимание, что если клиент
-          жалуется на проблемы, предположительно вызванные ХХХ, заявку
-          необходимо перевести на горячую линию, не оставляя никаких
-          комментариев.
-        </p> 
-      </div>
-      <div class="step step--phone">
-        <img class="step__img" src="./img/step-2.svg">
-        <p class="step__topic">Позвони клиенту</p>
-        <p class="step__desc">
-          У всех сотрудников есть аккаунт в ХХХХ. Для этого не нужны дополнительные
-          сим-карта и телефон — звонки осуществляются через приложение на
-          смартфоне или компьютере.
-        </p>
-      </div>
-      <div class="step step--phone">
-        <img class="step__img" src="./img/step-3.svg">
-        <p class="step__topic">Проведи звонок</p>
-        <p class="step__desc">
-          Будь приветлив и вежлив, постарайся узнать и решить проблему клиента. О том,
-          как провести разговор, что говорить и как расположить к себе, читай здесь.
-        </p>
-        <a href="#" class="step__link">Частые вопросы</a>
-      </div>
-      <div class="step step--list">
-        <img class="step__img" src="./img/step-4.svg">
-        <p class="step__topic">Запиши результаты</p>
-        <p class="step__desc">
-          Комментарий по звонку и все необходимые данные записывай сразу после звонка.
-          Старайся избегать общих фраз и отвечать на вопросы максимально развернуто.
-        </p>
-      </div>
-      <div class="separator"></div>
+      <div class="step__list">
+        <div class="step step--smile">
+          <img class="step__img" src="./img/step-1.svg"> 
+          <p class="step__topic">Выбери заявку</p>
+          <p class="step__desc">
+            Выбери заявку из списка ниже. Обрати внимание, что если клиент
+            жалуется на проблемы, предположительно вызванные ХХХ, заявку
+            необходимо перевести на горячую линию, не оставляя никаких
+            комментариев.
+          </p> 
+        </div>
+        <div class="step step--phone">
+          <img class="step__img" src="./img/step-2.svg">
+          <p class="step__topic">Позвони клиенту</p>
+          <p class="step__desc">
+            У всех сотрудников есть аккаунт в ХХХХ. Для этого не нужны дополнительные
+            сим-карта и телефон — звонки осуществляются через приложение на
+            смартфоне или компьютере.
+          </p>
+        </div>
+        <div class="step step--phone">
+          <img class="step__img" src="./img/step-3.svg">
+          <p class="step__topic">Проведи звонок</p>
+          <p class="step__desc">
+            Будь приветлив и вежлив, постарайся узнать и решить проблему клиента. О том,
+            как провести разговор, что говорить и как расположить к себе, читай здесь.
+          </p>
+          <a href="#" class="step__link">Частые вопросы</a>
+        </div>
+        <div class="step step--list">
+          <img class="step__img" src="./img/step-4.svg">
+          <p class="step__topic">Запиши результаты</p>
+          <p class="step__desc">
+            Комментарий по звонку и все необходимые данные записывай сразу после звонка.
+            Старайся избегать общих фраз и отвечать на вопросы максимально развернуто.
+          </p>
+        </div>
+        <div class="separator"></div>
+      </div>  
     </div>
   </body>
 </html>
