--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="step__list">
         <div class="step step--smile">
-          <img class="step__img" src="./img/step-1.svg"> 
+          <img class="step__img" src="./img/step-1.svg" alt="Шаг 1"> 
           <p class="step__topic">Выбери заявку</p>
           <p class="step__desc">
             Выбери заявку из списка ниже. Обрати внимание, что если клиент
@@ -23,7 +23,7 @@
           </p> 
         </div>
         <div class="step step--phone">
-          <img class="step__img" src="./img/step-2.svg">
+          <img class="step__img" src="./img/step-2.svg" alt="Шаг 2">
           <p class="step__topic">Позвони клиенту</p>
           <p class="step__desc">
             У всех сотрудников есть аккаунт в ХХХХ. Для этого не нужны дополнительные
@@ -32,7 +32,7 @@
           </p>
         </div>
         <div class="step step--phone">
-          <img class="step__img" src="./img/step-3.svg">
+          <img class="step__img" src="./img/step-3.svg" alt="Шаг 3">
           <p class="step__topic">Проведи звонок</p>
           <p class="step__desc">
             Будь приветлив и вежлив, постарайся узнать и решить проблему клиента. О том,
@@ -41,7 +41,7 @@
           <a href="#" class="step__link">Частые вопросы</a>
         </div>
         <div class="step step--list">
-          <img class="step__img" src="./img/step-4.svg">
+          <img class="step__img" src="./img/step-4.svg" alt="Шаг 4">
           <p class="step__topic">Запиши результаты</p>
           <p class="step__desc">
             Комментарий по звонку и все необходимые данные записывай сразу после звонка.
